Show nexthops visually